added a parencite example

--- a/mendeley.bib
+++ b/mendeley.bib
@@ -16,3 +16,10 @@ title = {{Guidelines for performing Systematic Literature Reviews in Software En
 volume = {2},
 year = {2007}
 }
+
+@misc{turing1948intelligent,
+  title={Intelligent machinery},
+  author={Turing, Alan Mathison},
+  year={1948},
+  publisher={NPL. Mathematics Division}
+}
