--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 %============= Disclaimer ======================
-% This template has been modified by LeninGF from
-% a previous thesis template in overleaf to address
-% the font and style of EPN, 
-% hope it helps and may science be with U
+% The original template corresponds to Author: Josh Cassidy (August 2013) and it is found in the Overleaf tutorial: "How to Write a Thesis in LaTeX", available at: https://www.overleaf.com/learn/latex/How_to_Write_a_Thesis_in_LaTeX_(Part_1):_Basic_Structure.
+%  Modifications to the aforementioned design to address the font and style of Escuela Polit\'{e}cnica Nacional have been carried out by LeninGF.
+% This template is availabe at: https://github.com/LeninGF/Computer-Science-Master-Thesis-EPN-Template/blob/master/README.md
+% Hope it helps and may science be with U
 %============= Disclaimer ======================
 \documentclass[12pt,oneside]{report}  %twoside
 \usepackage[utf8]{inputenc}
